some documentation fixes

--- a/doc/src/usage.tex
+++ b/doc/src/usage.tex
@@ -79,7 +79,9 @@ If you would like to integrate the provided output validation system, please do 
 \end{enumerate}
 
 \subsection{Tracing Computational Errors} \label{sub:debugTracing}
-Hybrid Fortran comes with a debug implementation that you can use to track down computational errors as close as possible to their root cause. To use it, set \verb|OPTION_FLAGS=DEBUG_PRINT| in \verb|MakesettingsGeneral|. By using \verb|make tests_cpu| and \verb|make tests_gpu| the output in \verb|log_last_run.txt| in the \verb|TEST_EXECUTABLES| folders will contain the values of all symbols used in kernels after each kernel has run, at a specific point. This point you define using the \verb|DEBUG_OUT_|-prefixed preprocessor definitions for each domain in the \verb|storage_order.F90| file (i.e. switching to a different point needs a recompilation). For large applications, the recommended workflow is to save \verb|log_last_run.txt| in separate text files (once for the program version that you have already validated as correct, once for the program version that you are trying to debug). Then sanitize these files by replacing whats found by the regular expression pattern \verb|^\s*entering.*|^\s*calling.*|^\s*$|^\s*[0-9]\s*$| with empty strings. This should remove all non-relevant differences between CPU and GPU versions of your program output and only leave the actual computational errors as differences. Then, use a graphical diff program to step through the differences from top to bottom to find the first occurrence of a computational error. Please note that computational inaccuracies are to be expected, depending on the precision you use for your floating point values.
+Hybrid Fortran comes with a debug implementation that you can use to track down computational errors as close as possible to their root cause. To use it, set \verb|OPTION_FLAGS=DEBUG_PRINT| in \verb|MakesettingsGeneral|. By using \verb|make tests_cpu| and \verb|make tests_gpu| the output in \verb|log_last_run.txt| in the \verb|TEST_EXECUTABLES| folders will contain the values of all symbols used in kernels after each kernel has run, at a specific point. This point you define using the \verb|DEBUG_OUT_|-prefixed preprocessor definitions for each domain in the \verb|storage_order.F90| file (i.e. switching to a different point needs a recompilation). For large applications, the recommended workflow is to save \verb|log_last_run.txt| in separate text files (once for the program version that you have already validated as correct, once for the program version that you are trying to debug). Then sanitize these files by replacing whats found by the regular expression pattern 
+\verb{^\s*entering.*|^\s*calling.*|^\s*$|^\s*[0-9]\s*${ %using {　as verb delimiters
+with empty strings. This should remove all non-relevant differences between CPU and GPU versions of your program output and only leave the actual computational errors as differences. Then, use a graphical diff program to step through the differences from top to bottom to find the first occurrence of a computational error. Please note that computational inaccuracies are to be expected, depending on the precision you use for your floating point values.
 
 \subsection{Interface} \label{sub:testInterface}
 The following files are part of the sample test interface provided with \textbf{Hybrid Fortran}. They are located in the framework's binary directory. In order to set up the test system correctly, what's relevant for you is the information provided for the files \verb|runTest.sh| and \verb|runTests.sh|. The other files are described here for completeness and in case you'd like to adapt the system for different use cases.
