--- a/doc/src/framework.tex
+++ b/doc/src/framework.tex
@@ -152,6 +152,10 @@ scalar1, scalar2, ...
 
 In \textbf{Hybrid Fortran} terms then, a scalar is a domain dependant without domains. You can however use \verb|attribute(autoDom)| as well here. As a general best practice, you will have two domain dependant directives: One listing the symbols and arrays privatized in the parallel domains and one listing the non privatized symbols and arrays (i.e. they are not variant over these domains).
 
+\subsection{Scheme Directive}
+
+Wrapping your subroutines in \verb|@scheme{SCHEME_NAME} .... @end scheme| is giving you the option of switching between different backend implementations at compiletime, for example allowing you to enforce a host-only implementation or enabling support for reduction using the OpenACC impelementation. To specify which backend implementation is used for each scheme, see the example provided in \verb|MakesettingsGeneral|. See also section \ref{sub:backendImplementation}.
+
 \subsection{Backend Implementations} \label{sub:backendImplementation}
 
  Now that the directives have been introduced, you might wonder what exactly Hybrid Fortran is doing with all this. Essentially, the code transformation framework consists of three parts:
@@ -161,6 +165,9 @@ In \textbf{Hybrid Fortran} terms then, a scalar is a domain dependant without do
   \item Callgraph Analysis (Based on the Parser, produces a callgraph coloured by the subroutines' position relative to the parallel regions for CPU and GPU case).
   \item Backend Implementation (For each relevant code point, the Parser calls implementation hooks for the transformation).
  \end{enumerate}
+
+ Please note: When using the OpenACC implementation you should also put the following line in \verb|MakesettingsGPU|:
+ \verb|PGFLAGS= -D_OPENACC|. Furthermore, the \verb|-acc| compiler flag should be used for PGI.
 
  This separation of concerns allows different implementations to be passed in and used, thus enabling portability to different hardware platforms as well as flexibility during development and testing. The implementation class can be chosen using the \verb|MakesettingsGeneral| file in your project's config folder (see also sec. \ref{sub:userDefined}). Table \ref{table:backendImplementationComparison} gives you an overview over the capabilities of each implementation. Adding your own implementation class is as easy as implementing the class in the file \verb|hf/FortranImplementation.py|, using any of the provided classes as a base class and specifying your class name in \verb|MakesettingsGeneral|. For a more detailed look at how to do this, please see also sec. \ref{sub:switchImplementation}.
 
